tests/errors/not-wire-derivable/main.pa
# A `wire` boundary rejects non-serializable types at compile time, with
# attribution naming the offending component.
def main = fun {
	let widget = {label: "ok", on-click: fun n { n + 1 }}
	let bytes = wire.encode widget
	print "unreachable"
}
